@@ -11,6 +11,7 @@ Version history:
 0.5.1:
 - optimizations for message handling and memory footprint
 - enhanced build system for cygwin
+- added GetCanvasDir to retrieve folder in which the patcher resides
 
 0.5.0:
 - fixes for 64 bit builds (size_t is integer type of pointer size)
